--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,18 @@
  *= require_self
  */
 
+// Variables
+@import 'variables/colors';
+@import 'variables/utils';
+
 // Third-party
 @import 'foundation_and_overrides';
 @import 'font-awesome';
+
+// Mixins
+@import 'mixins/bem';
+
+// Blocks
+@import 'blocks/container';
+@import 'blocks/navigation';
+@import 'blocks/story';
