--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,4 +1,4 @@
 .top-bar.navigation
   .top-bar-title
-    = link_to '#', class: 'strong' do
+    = link_to root_path, class: 'strong' do
       = t('app.title')
