Add add basic stories filtering

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 // Blocks
 @import 'blocks/container';
 @import 'blocks/navigation';
-@import 'blocks/filter-form';
+@import 'blocks/releases-filter';
 @import 'blocks/story';
 @import 'blocks/projects';
+@import 'blocks/stories-wrapper';
