--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,4 +1,5 @@
 .top-bar.navigation
   .top-bar-title
+    %button.button{'data-toggle' => 'offCanvas', type: 'button'} Open Menu
     = link_to root_path, class: 'strong' do
       = t('app.title')
