loading side bar with session stories

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   = render 'shared/head'
 
   %body
-    #offCanvas.off-canvas.position-left{'data-off-canvas' => ""}
+    #offCanvas.off-canvas.position-right{'data-off-canvas' => ""}
       = render 'shared/print_cart'
     .off-canvas-content{'data-off-canvas-content' => ""}
       = render 'shared/navigation'
