--- a/app/views/releases/index.html.haml
+++ b/app/views/releases/index.html.haml
@@ -2,7 +2,7 @@
   .column
     .releases-filter
       - @releases.each do |release|
-        = link_to release.name, project_release_stories_path(project_id: release.prefix_options[:project_id], release_id: release.id), class: 'button hollow', remote: true
+        = link_to release.name, project_stories_path(project_id: release.prefix_options[:project_id], release_id: release.id), class: 'button hollow', remote: true
 
 .row.stories-wrapper.small-up-1.medium-up-2.large-up-2{ 'data-equalizer': '', 'data-equalize-on': 'medium' }
   = render partial: 'story', collection: []
