--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -5,4 +5,4 @@
   .top-bar-right
     %ul.menu
       %li
-        %button.button{'data-toggle' => 'offCanvas', type: 'button'} Stories to print
+        %button.button{ 'data-toggle': 'off_canvas', type: 'button'} Stories to print
