--- a/app/views/releases/_story_print.html.haml
+++ b/app/views/releases/_story_print.html.haml
@@ -6,4 +6,4 @@
 
       - if story.try(:description)
         %p.story-print__description
-          = story.description
+          = markdown story.description
