--- a/app/assets/stylesheets/blocks/_story-print.scss
+++ b/app/assets/stylesheets/blocks/_story-print.scss
@@ -7,7 +7,7 @@
     font-weight: 500;
     border-bottom: 1px solid $gallery;
     padding-bottom: 1rem;
-    font-size: 1rem;
+    font-size: .75rem;
   }
 
   @include element('description') {
