Adding js to remove/add stories from side nav

--- a/app/assets/stylesheets/blocks/_print-cart.scss
+++ b/app/assets/stylesheets/blocks/_print-cart.scss
@@ -8,6 +8,9 @@
     .story__title {
       font-size: .65rem;
     }
+    .story__details {
+      font-size: .65rem;
+    }
     .story__description {
       font-size: .65rem;
     }
