--- a/app/views/stories/add_to_print.js.erb
+++ b/app/views/stories/add_to_print.js.erb
@@ -1,1 +1,4 @@
 $("#story_<%= params[:story_id] %> .story__actions").html("<%= j render partial: 'releases/story_actions', locals: { story_id: params[:story_id] } %>")
+let storyEl = $("#story_<%= params[:story_id] %>").parent().clone();
+$("#story_<%= params[:story_id] %>").focus();
+$(".print-cart").append(storyEl);
