--- a/app/views/stories/remove_to_print.js.erb
+++ b/app/views/stories/remove_to_print.js.erb
@@ -1,1 +1,3 @@
 $("#story_<%= params[:story_id] %> .story__actions").html("<%= j render partial: 'releases/story_actions', locals: { story_id: params[:story_id] } %>")
+$(".print-cart #story_<%= params[:story_id] %>").parent().remove();
+$("#story_<%= params[:story_id] %>").focus();
