Fix the issue with add/remove stories to print

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,5 +11,5 @@
         = yield
 
       .show-for-print
-        .row.small-up-2
+        .row.small-up-2#story_print_wrapper
           = render partial: 'releases/story_print', collection: @stories_to_print
