Fix print font size

--- a/app/views/releases/_story_print.html.haml
+++ b/app/views/releases/_story_print.html.haml
@@ -5,5 +5,5 @@
         = story.name
 
       - if story.try(:description)
-        %p.story-print__description
+        .story-print__description
           = markdown story.description
