Fix links on print page

--- a/app/assets/stylesheets/blocks/_story-print.scss
+++ b/app/assets/stylesheets/blocks/_story-print.scss
@@ -12,6 +12,7 @@
 
   @include element('description') {
     word-break: break-word;
+    overflow: hidden;
     padding-bottom: 1rem;
     font-size: .75rem;
   }
