Adding pivotal whiteboard

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -5,4 +5,6 @@
   .top-bar-right
     %ul.menu
       %li
+        %a.button{ href: '/whiteboard' } Whiteboard
+      %li
         %button.button{ 'data-toggle': 'off_canvas', type: 'button'} Stories to print
