--- a/app/javascript/packs/App.scss
+++ b/app/javascript/packs/App.scss
@@ -6,10 +6,10 @@ body {
 
 .story {
   cursor: pointer;
-}
 
-.story:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .project {
@@ -22,8 +22,12 @@ body {
 
 .whiteboard {
   padding-top: 2rem;
+
+  h1 {
+    text-align: center;
+  }
 }
 
-.whiteboard h1 {
-  text-align: center;
+.App {
+  margin: 2rem;
 }
