Add hostname to layout to test load balancer AWS

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,5 @@
       .show-for-print
         .row.small-up-2#story_print_wrapper
           = render partial: 'releases/story_print', collection: @stories_to_print
+  %footer
+    = `hostname`
