--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,6 @@ footer {
   position: fixed;
   bottom: 0;
   right: 0;
-  background-color: $light-gray;
+  background-color: pink;
   padding: 1rem;
 }
